--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha --timeout 10000 --exit",
-    "start": "node serve.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
