--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/shawnmccarthy/CSC3916_HW2#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "core-util-is": "^1.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
